@@ -7,8 +7,13 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.UncheckedIOException;
+import java.nio.channels.Channels;
+import java.nio.channels.ReadableByteChannel;
+import java.nio.channels.WritableByteChannel;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 
 /**
  * Provides safe access to resources.
@@ -29,20 +34,20 @@ public final class Resources {
 		InputStream result;
 
 		try {
-			result = Files.newInputStream(Paths.get(path));
-			LOG.info("Loaded from path [{}]", path);
+			result = Files.newInputStream(Path.of(path));
+			LOG.info("Got stream from path [{}]", path);
 		} catch (IOException e) {
-			LOG.warn("Failed to load from path [{}] - {}", path, e);
-			result = ClassLoader.getSystemResourceAsStream(path);
+			LOG.warn("Failed to get stream from path [{}] - {}", path, e);
 
+			result = ClassLoader.getSystemResourceAsStream(path);
 			if (result != null) {
-				LOG.info("Loaded from classpath [{}]", path);
+				LOG.info("Got stream from classpath [{}]", path);
 			} else {
-				LOG.warn("Failed to load from classpath [{}]", path);
+				LOG.warn("Failed to get stream from classpath [{}]", path);
 			}
 		}
 		if (result == null) {
-			LOG.error("Failed to load resource [{}]", path);
+			LOG.error("Failed to get stream for resource [{}]", path);
 		}
 		return result;
 	}
@@ -54,11 +59,51 @@ public final class Resources {
 	 */
 	public static OutputStream outStream(String path) {
 		try {
-			OutputStream result = Files.newOutputStream(Paths.get(path));
+			OutputStream result = Files.newOutputStream(Path.of(path));
 			LOG.info("Got handle [{}]", path);
 			return result;
 		} catch (IOException e) {
 			LOG.error("Failed to get handle", e);
+			throw new UncheckedIOException(e);
+		}
+	}
+
+	/**
+	 * Returns a readable channel to a resource at {@code path}.
+	 * Attempts locations in order: [path, classpath].
+	 */
+	public static ReadableByteChannel read(String path) {
+		ReadableByteChannel result = null;
+
+		try {
+			result = Files.newByteChannel(Path.of(path), StandardOpenOption.READ);
+			LOG.info("Got read handle to path [{}]", path);
+		} catch (IOException e) {
+			LOG.warn("Failed to get read handle to path [{}] - {}", path, e);
+
+			var stream = ClassLoader.getSystemResourceAsStream(path);
+			if (stream != null) {
+				result = Channels.newChannel(stream);
+				LOG.info("Got read handle to classpath [{}]", path);
+			} else {
+				LOG.warn("Failed to get read handle to classpath [{}]", path);
+
+				throw new UncheckedIOException(new NoSuchFileException(path));
+			}
+		}
+		return result;
+	}
+
+	/**
+	 * Returns a writable channel to a resource at {@code path}.
+	 */
+	public static WritableByteChannel write(String path) {
+		try {
+			WritableByteChannel result = Files.newByteChannel(Path.of(path), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+			LOG.info("Got write handle to path [{}]", path);
+			return result;
+		} catch (IOException e) {
+			LOG.error("Failed to get write handle to path [{}] - {}", path, e);
 			throw new UncheckedIOException(e);
 		}
 	}
